fixed horizontal scrollbar appearing when reordering downloads

--- a/DARK/libraryroot.custom.css
+++ b/DARK/libraryroot.custom.css
@@ -1308,6 +1308,7 @@ button.downloads_Button_3oavR:hover.DialogButton._DialogLayout.Secondary:hover,
 }
 
 .downloads_ItemLists_1ugNi {
+  overflow-x:hidden!important;
   background: VAR(--DOWNLOADSITEMLIST) !important;
 }
 
@@ -1457,6 +1458,10 @@ div.MediumWindow
 .downloads_PatchNotes_3kXEp:hover {
   color:var(--BLACK)!important;
 
+}
+
+.downloads_SectionJumpBar_mw7VZ {
+  display:none!important;
 }
 
 /*-------------------------- DOWNLOADS PAGE --------------------------*/
